refactor(#56): 연차 유형 API 리팩토링
* refactor(#56): Response 클래스에 Entity를 Response로 변환하는 메소드 추가

* refactor(#56): 조회 쿼리 메소드를 Dao 클래스로 이동

* refactor(#56): 연차 유형 조회 쿼리 Dao 명칭 수정 및 테스트 코드에 사용된 연차 유형 빌더 파일 추가

* feat(#56): 연차 유형 삭제 API 구현

* feat(#56): 법정휴가 수정 및 삭제 못하도록 구현

* feat(#56): LeaveTypeFindDao에 삭제된 연차 유형 검증 메서드 추가

* feat(#56): 만료되지 않은 미사용 연차 존재 시, 연차 유형 삭제 못하도록 구현