@@ -5,9 +5,9 @@ import com.shiftm.shiftm.domain.leave.domain.LeaveType;
 import com.shiftm.shiftm.domain.leave.dto.request.CreateLeaveRequest;
 import com.shiftm.shiftm.domain.leave.dto.request.UpdateLeaveRequest;
 import com.shiftm.shiftm.domain.leave.dto.response.LeaveCountResponse;
-import com.shiftm.shiftm.domain.leave.repository.LeaveDao;
+import com.shiftm.shiftm.domain.leave.repository.LeaveFindDao;
 import com.shiftm.shiftm.domain.leave.repository.LeaveRepository;
-import com.shiftm.shiftm.domain.leave.repository.LeaveTypeDao;
+import com.shiftm.shiftm.domain.leave.repository.LeaveTypeFindDao;
 import com.shiftm.shiftm.domain.member.domain.Member;
 import com.shiftm.shiftm.domain.member.exception.MemberNotFoundException;
 import com.shiftm.shiftm.domain.member.repository.MemberFindDao;
@@ -20,6 +20,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -27,8 +28,8 @@ public class LeaveService {
 
     private final MemberRepository memberRepository;
     private final MemberFindDao memberFindDao;
-    private final LeaveTypeDao leaveTypeDao;
-    private final LeaveDao leaveDao;
+    private final LeaveTypeFindDao leaveTypeFindDao;
+    private final LeaveFindDao leaveDao;
     private final LeaveRepository leaveRepository;
 
     @Transactional
@@ -37,11 +38,11 @@ public class LeaveService {
 
         validateMembers(requestDto.memberIds(), members);
 
-        final LeaveType leaveType = leaveTypeDao.findById(requestDto.leaveTypeId());
+        final LeaveType leaveType = leaveTypeFindDao.findById(requestDto.leaveTypeId());
 
         final List<Leave> leaves = requestDto.memberIds().stream()
                 .map(memberId -> createLeave(memberId, toEntity(requestDto, leaveType)))
-                .toList();
+                .collect(Collectors.toList());
 
         leaveRepository.saveAll(leaves);
     }
@@ -51,7 +52,7 @@ public class LeaveService {
         final Leave leave = leaveDao.findById(leaveId);
 
         if (leave.getLeaveType().getId() != requestDto.leaveTypeId()) {
-            final LeaveType leaveType = leaveTypeDao.findById(requestDto.leaveTypeId());
+            final LeaveType leaveType = leaveTypeFindDao.findById(requestDto.leaveTypeId());
 
             leave.updateLeaveType(leaveType);
         }
@@ -113,7 +114,7 @@ public class LeaveService {
         if (memberIds.size() != members.size()) {
             final List<String> validIds = members.stream()
                     .map(Member::getId)
-                    .toList();
+                    .collect(Collectors.toList());
 
             memberIds.stream()
                     .filter(id -> !validIds.contains(id))
